# FrostNote

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/handoffs/: 2026-06-11-102050-frostnote-context.md
dev-logs/: 2026-06-10.md  2026-06-11.md
docs/: cloud-sync-plan.md  data-model.md  design-guidelines.md  development-steps.md  requirements.md  supabase-schema.sql  supabase-setup.md  technical.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/cloud/: supabaseClient.ts  sync.test.ts  sync.ts
