[package]
name = "frostnote"
version = "0.1.0"
description = "A lightweight Windows desktop notes app."
authors = ["FrostNote"]
edition = "2021"

[lib]
name = "label_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-global-shortcut = "2"
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }
